--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "react-swipe": "^5.1.1",
     "redux": "^4.0.0-beta.2",
     "redux-immutable": "^4.0.0"
+  },
+  "devDependencies": {
+    "standard": "^11.0.1"
   }
 }
